--- a/ApsCache/ApsCache.csproj
+++ b/ApsCache/ApsCache.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.14.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.9" />
     <PackageReference Include="RestSharp" Version="106.11.7" />
   </ItemGroup>
 
